apps/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
      middlewares:
        - name: fail2ban
  tls:
    secretName: authelia-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-http
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: authelia
spec:
  redirectScheme:
    scheme: https
    permanent: true
